--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="btn">
-        <form action="/page2.html">
+        <form action="./page2.html">
             <button class="button" type="submit">Click here to continue</button>
         </form>
     </div>
